--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Expires" content="0" />
 
   <title>
-    Baseball 2021
+    Chicago Baseball 2022
   </title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
